[tool.poetry]
name = "learning-stable-diffusion"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "learning_stable_diffusion"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
diffusers = "^0.14.0"
transformers = "^4.27.4"
accelerate = "^0.18.0"
scipy = "^1.10.1"
safetensors = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
